<resources>
    <string name="app_name">My recipes</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search_by_text">Search by content</string>


    <!-- SnackBar -->
    <string name="success">Succeeded!</string>
    <string name="success_saved">Database successfully saved!</string>
    <string name="folder_not_empty">Impossible, this folder not empty!</string>
    <string name="folder_folder_not_select">Folder is not selected!</string>
    <string name="there_is_no_change">No changes!</string>
    <string name="nothing_was_entered">Field is empty!</string>

    <!-- Popup Menu Items -->
    <string name="item_rename">Rename</string>
    <string name="item_delete">Delete</string>
    <string name="item_move">Move to</string>
    <string name="item_favorite">I liked :)</string>
    <!--Main Menu Items-->
    <string name="item_edit_recipe">Edit</string>
    <string name="item_get_picture">Get Picture</string>
    <string name="item_share_recipe">Share</string>
    <string name="item_save_recipe">Save</string>

    <!-- Dialog -->
    <string name="dlg_add_category">Add a folder:</string><!-- * -->
    <string name="dlg_hint">compose a name</string><!-- * -->
    <string name="dlg_space"> </string><!-- * -->
    <string name="dlg_rename_category">Rename a folder:</string><!-- * -->
    <string name="dlg_confirm_delete">Delete a folder:</string><!-- * -->
    <string name="dlg_cannot_delete">You cannot delete!</string><!-- * -->
    <string name="dlg_cannot_delete_text">Folder is not empty</string><!-- * -->
    <string name="dlg_btn_cancel">Cancel</string>
    <string name="dlg_add_recipe">Add recipe:</string><!-- * -->
    <string name="dlg_rename_recipe">Rename a recipe:</string><!-- * -->
    <string name="dlg_move">Move to folder:</string><!-- * -->
    <string name="dlg_confirm_del_recipe">Delete a recipe:</string><!-- * -->

    <!--Dialog Save Restore-->
    <string name="dlg_save_file">Save database</string>
    <string name="dlg_restore_file">Restore database</string>
    <string name="dlg_path_to_file">Path:</string>
    <string name="dlg_name_of_file">Filename: \'cook.db\'</string>
    <string name="dlg_sdcard_disabled">Can\'t access SD card!</string>
    <string name="dlg_sdcard_check_mount">Check its connection.</string>
    <string name="dlg_success_saved">Recipes saved!</string>
    <string name="dlg_success_loaded">Recipes loaded!</string>
    <string name="dlg_error_save_file">Error! Data is not saved!</string>
    <string name="dlg_file_not_found">Error! File not found!</string>
    <string name="dlg_folder_not_found">Error! Folder not found!</string>
    <string name="dlg_sdcard_not_prepared">Or SD card is not ready.</string>
    <string name="dlg_file_found">Date last saved:</string>
    <string name="dlg_warning">Attention! All your data will be overwritten!</string>

    <!--FragTextRecipe-->
    <string name="title_recipe_edit">Title:</string>
    <string name="text_recipe_edit">Recipe:</string>
    <string name="text_recipe_review">Description of recipe:</string>
    <string name="text_recipe_no_title">Recipe untitled</string>
    <string name="text_recipe_no_text">Add a description of the recipe</string>
    <string name="text_add_recipe">Add a recipe</string>
    <string name="text_favorite_not_found">Favorite recipes not found</string>
    <string name="text_search_not_found">Search No results</string>
    <string name="text_share_recipe">Send to:</string>

    <!--FragSubcategory-->
    <string name="text_add_folder_or_recipe">Add a folder or a recipe</string>

    <!--FragTopCategory-->
    <string name="text_add_folder_top_category">
        Add a folder for recipes, for example \'Desserts\'
    </string>

    <!--Main Activity-->
    <string name="text_empty_request">Enter a few letters to search</string>

    <!-- Subtitle fo action bar -->
    <string name="text_list_favorite_recipe">Favorite Recipes:</string>
    <string name="text_list_search_result">Searching results:</string>
    <string name="text_recipe">Recipe</string>

    <!--Drawer-->
    <string name="drawer_home">Home</string>
    <string name="drawer_favorite">Favorite Recipes</string>
    <string name="drawer_remove_ads">Remove ads</string>
    <string name="drawer_additionally">Additionally</string>
    <string name="drawer_search">Search by content</string>
    <string name="drawer_export_db">Save</string>
    <string name="drawer_import_db">Restore</string>
    <string name="drawer_backup_group">Backup of recipes into SD card</string>
    <string name="drawer_feedback">Feedback</string>
    <string name="drawer_send_question">Send question</string>

    <string name="email">mailto:trd.developer@gmail.com</string>
    <string name="email_theme">The question of the app \'My recipes\'</string>

    <!--Dialog Pick Image-->
    <string name="dlg_pick_image_camera">Camera</string>
    <string name="dlg_pick_image_gallery">Gallery</string>
    <string name="dlg_pick_image_title">Pick image from:</string>
    <string name="common_dialog_ok">Ok</string>
    <string name="common_progress_message">Please wait...</string>
    <string name="common_server_error">Server error!</string>
    <string name="permissions_error">This app needs this permission to work correctly!</string>

    <!--Settings-->
    <string name="text_select_color_theme">Select color theme</string>
    <string-array name="themes">
        <item>Indigo</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Deep Purple</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Light Blue</item>
        <item>Cyan</item>
        <item>Teal</item>
        <item>Green</item>
        <item>Light Green</item>
        <item>Lime</item>
        <item>Yellow</item>
        <item>Amber</item>
        <item>Orange</item>
        <item>Deep Orange</item>
        <item>Brown</item>
        <item>Grey</item>
        <item>Blue Grey</item>
        <item>Black White</item>
    </string-array>
    <string name="checkbox_white_background">Leave a white background</string>
    <string name="button_apply">Apply selected theme</string>
</resources>
